# interviewer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: __init__.py  app.py
data/: comments.jsonl
src/interviewer/: __init__.py  data.py  github.py  parser.py
